--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@barba/core": "^2.9.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swup": "^2.0.19"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
