--- a/portfolio-nextjs/package.json
+++ b/portfolio-nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "portfolio-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
