--- a/portfolio-nextjs/package.json
+++ b/portfolio-nextjs/package.json
@@ -13,6 +13,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-type-animation": "^2.1.2"
   },
