--- a/portfolio-nextjs/package.json
+++ b/portfolio-nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "lottie-web": "^5.10.2",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
