--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-github-calendar": "^3.4.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
-    "react-type-animation": "^2.1.2"
+    "react-type-animation": "^2.1.2",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
