--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "lottie-web": "^5.10.2",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
     "react-github-calendar": "^3.4.0",
     "react-hot-toast": "^2.4.0",
